--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,8 @@
 	<meta charset="utf-8">
 	<title>Сливочное мороженое</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&subset=cyrillic" rel="stylesheet">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
 	<div class="wrapper-inner">
@@ -13,7 +14,7 @@
 			<header class="main-header">
 				<nav class="main-navigation clearfix">
 					<div class="logo">
-						<a href="index.html"><img src="img/index/logo.svg" alt="Логотип"></a>
+						<a href="index.html"><img src="img/index/logo.svg" alt="Логотип" width="154" height="64"></a>
 					</div>
 					<ul class="main-menu">
 						<li class="main-menu-option"><a href="#" class="catalog-menu-show main-menu-active">Каталог</a>
@@ -297,7 +298,7 @@
 				</section>
 				<section class="html-academy">
 					<div class="html-academy-content">
-						<img src="img/index/htmlacademy.svg" alt="logo">
+						<img src="img/index/htmlacademy.svg" alt="logo" width="108" height="37">
 						<span class="made">Сделано в <a href="#">HTML Academy</a> © 2016</span>
 					</div>
 				</section>
