--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<meta charset="utf-8">
 	<title>HTML Academy: Глейси</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&subset=cyrillic" rel="stylesheet">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
 	<input type="radio" id="btn-1" name="toggle" checked>
@@ -15,7 +16,7 @@
 			<header class="main-header">
 				<nav class="main-navigation clearfix">
 					<div class="logo">
-						<img src="img/index/logo.svg" alt="Логотип">
+						<img src="img/index/logo.svg" alt="Логотип" width="154" height="64">
 					</div>
 					<ul class="main-menu">
 						<li class="main-menu-option"><a href="#" class="catalog-menu-show">Каталог</a>
@@ -224,7 +225,7 @@
 				</section>
 				<section class="html-academy">
 					<div class="html-academy-content">
-						<img src="img/index/htmlacademy.svg" alt="logo">
+						<img src="img/index/htmlacademy.svg" alt="logo" width="108" height="37">
 						<span class="made">Сделано в <a href="#">HTML Academy</a> © 2016</span>
 					</div>
 				</section>
