--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
 						<label for="btn-3"></label>
 					</div>
 				</div>
-				<div class="stocks">
+				<div class="stocks clearfix">
 					<section class="stock stock-left clearfix">
 						<h2>Малинка даром!</h2>
-						<p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно</p>
+						<p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
 						<a href="#" class="button">Хочу варенье!</a>
 					</section>
 					<section class="stock stock-right">
@@ -166,7 +166,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="news">
+				<div class="news clearfix">
 					<div class="news-block news-left">
 						<span class="name">Новое в нашем блоге</span>
 						<a href="#" class="news-title link-color">10 способов сервировки фруктовых щербетов к&nbsp;столу</a>
