--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="wrapper-inner">
 		<div class="container clearfix">
-			<header class="main-header">
+			<header class="main-header clearfix">
 				<nav class="main-navigation clearfix">
 					<div class="logo">
 						<a href="index.html"><img src="img/index/logo.svg" alt="Логотип" width="154" height="64"></a>
@@ -162,7 +162,7 @@
 						<div class="item-active">
 							<div class="item-top">
 								<img src="img/index/2.png" alt="">
-								<span class="price">380<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp;/кг</span></span>
+								<span class="price">380<img src="img/index/rub.svg" alt="Р" width="32" height="37"><span class="mass">&nbsp;/кг</span></span>
 							</div>
 							<a href="#" class="goods-title link-color">Сливочно-кофейное с кусочками шоколада</a>
 							<a href="#" class="button">Быстрый просмотр</a>
@@ -172,7 +172,7 @@
 						<div class="item-active">
 							<div class="item-top">
 								<img src="img/index/3.png" alt="">
-								<span class="price">355<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp;/кг</span></span>
+								<span class="price">355<img src="img/index/rub.svg" alt="Р" width="32" height="37"><span class="mass">&nbsp;/кг</span></span>
 							</div>
 							<a href="#" class="goods-title link-color">Сливочно-клубничное с присыпкой из белого шоколада</a>
 							<a href="#" class="button">Быстрый просмотр</a>
@@ -181,8 +181,8 @@
 					<article class="item">
 						<div class="item-active">
 							<div class="item-top">
-								<img src="img/index/4.png" alt="">
-								<span class="price">415<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp;/кг</span></span>
+								<img src="img/index/4.png" alt="" width="267" height="267">
+								<span class="price">415<img src="img/index/rub.svg" alt="Р" width="32" height="37"><span class="mass">&nbsp;/кг</span></span>
 							</div>
 							<a href="#" class="goods-title link-color">Сливочное крем-брюле с карамельной подливкой</a>
 							<a href="#" class="button">Быстрый просмотр</a>
@@ -191,8 +191,8 @@
 					<article class="item">
 						<div class="item-active">
 							<div class="item-top">
-								<img src="img/catalog/5.png" alt="">
-								<span class="price">325<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp;/кг</span></span>
+								<img src="img/catalog/5.png" alt="" width="267" height="267">
+								<span class="price">325<img src="img/index/rub.svg" alt="Р" width="32" height="37"><span class="mass">&nbsp;/кг</span></span>
 							</div>
 							<a href="#" class="goods-title link-color">Сливочное с брусничным джемом</a>
 							<a href="#" class="button">Быстрый просмотр</a>
@@ -201,8 +201,8 @@
 					<article class="item">
 						<div class="item-active">
 							<div class="item-top">
-								<img src="img/catalog/6.png" alt="">
-								<span class="price">410<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp;/кг</span></span>
+								<img src="img/catalog/6.png" alt="" width="267" height="267">
+								<span class="price">410<img src="img/index/rub.svg" alt="Р" width="32" height="37"><span class="mass">&nbsp;/кг</span></span>
 							</div>
 							<a href="#" class="goods-title link-color">Сливочно-черничное с цельными ягодами черники</a>
 							<a href="#" class="button">Быстрый просмотр</a>
@@ -211,8 +211,8 @@
 					<article class="item">
 						<div class="item-active">
 							<div class="item-top">
-								<img src="img/catalog/7.png" alt="">
-								<span class="price">375<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp;/кг</span></span>
+								<img src="img/catalog/7.png" alt="" width="267" height="267">
+								<span class="price">375<img src="img/index/rub.svg" alt="Р" width="32" height="37"><span class="mass">&nbsp;/кг</span></span>
 							</div>
 							<a href="#" class="goods-title link-color">Сливочно-лимонное с карамельной присыпкой</a>
 							<a href="#" class="button">Быстрый просмотр</a>
@@ -221,8 +221,8 @@
 					<article class="item">
 						<div class="item-active">
 							<div class="item-top">
-								<img src="img/catalog/8.png" alt="">
-								<span class="price">320<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp;/кг</span></span>
+								<img src="img/catalog/8.png" alt="" width="267" height="267">
+								<span class="price">320<img src="img/index/rub.svg" alt="Р" width="32" height="37"><span class="mass">&nbsp;/кг</span></span>
 							</div>
 							<a href="#" class="goods-title link-color">Сливочное с шоколадной стружкой</a>
 							<a href="#" class="button">Быстрый просмотр</a>
@@ -231,8 +231,8 @@
 					<article class="item">
 						<div class="item-active">
 							<div class="item-top">
-								<img src="img/catalog/9.png" alt="">
-								<span class="price">440<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp;/кг</span></span>
+								<img src="img/catalog/9.png" alt="" width="267" height="267">
+								<span class="price">440<img src="img/index/rub.svg" alt="Р" width="32" height="37"><span class="mass">&nbsp;/кг</span></span>
 							</div>
 							<a href="#" class="goods-title link-color">Сливочно-ванильное с кусочками шоколада</a>
 							<a href="#" class="button">Быстрый просмотр</a>
@@ -241,8 +241,8 @@
 					<article class="item">
 						<div class="item-active">
 							<div class="item-top">
-								<img src="img/catalog/10.png" alt="">
-								<span class="price">435<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp;/кг</span></span>
+								<img src="img/catalog/10.png" alt="" width="267" height="267">
+								<span class="price">435<img src="img/index/rub.svg" alt="Р" width="32" height="37"><span class="mass">&nbsp;/кг</span></span>
 							</div>
 							<a href="#" class="goods-title link-color">Сливочное с ментоловым сиропом</a>
 							<a href="#" class="button">Быстрый просмотр</a>
@@ -251,8 +251,8 @@
 					<article class="item">
 						<div class="item-active">
 							<div class="item-top">
-								<img src="img/catalog/11.png" alt="">
-								<span class="price">355<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp;/кг</span></span>
+								<img src="img/catalog/11.png" alt="" width="267" height="267">
+								<span class="price">355<img src="img/index/rub.svg" alt="Р" width="32" height="37"><span class="mass">&nbsp;/кг</span></span>
 							</div>
 							<a href="#" class="goods-title link-color">Сливочное с кусочками черного шоколада</a>
 							<a href="#" class="button">Быстрый просмотр</a>
@@ -261,8 +261,8 @@
 					<article class="item">
 						<div class="item-active">
 							<div class="item-top">
-								<img src="img/catalog/12.png" alt="">
-								<span class="price">420<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp;/кг</span></span>
+								<img src="img/catalog/12.png" alt="" width="267" height="267">
+								<span class="price">420<img src="img/index/rub.svg" alt="Р" width="32" height="37"><span class="mass">&nbsp;/кг</span></span>
 							</div>
 							<a href="#" class="goods-title link-color">Сливочное с мятным сиропом</a>
 							<a href="#" class="button">Быстрый просмотр</a>
@@ -271,11 +271,13 @@
 				</div>
 				<div class="page-bot clearfix">
 					<div class="paginator clearfix">
+						<a href="" class="page-before"></a>
 						<a class="paginator-active">1</a>
 						<a href="#" class="page">2</a>
 						<a href="#" class="page">3</a>
 						<a href="#" class="page">4</a>
 						<a href="#" class="page">5</a>
+						<a href="" class="page-after"></a>
 					</div>
 				</div>
 			</main>
