--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<input type="radio" id="btn-3" name="toggle">
 	<div class="wrapper">
 		<div class="container clearfix">
-			<header class="main-header">
+			<header class="main-header clearfix">
 				<nav class="main-navigation clearfix">
 					<div class="logo">
 						<img src="img/index/logo.svg" alt="Логотип" width="154" height="64">
@@ -109,8 +109,8 @@
 					<article class="item">
 						<div class="item-active hit-icon">
 							<div class="item-top">
-								<img src="img/index/1.png" alt="Изображение товара">
-								<span class="price">310<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp;/кг</span></span>
+								<img src="img/index/1.png" alt="Изображение товара" width="267" height="267">
+								<span class="price">310<img src="img/index/rub.svg" alt="Р" width="32" height="37"><span class="mass">&nbsp;/кг</span></span>
 							</div>
 							<a href="#" class="goods-title link-color">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
 							<a href="#" class="button">Быстрый просмотр</a>
@@ -119,8 +119,8 @@
 					<article class="item">
 						<div class="item-active hit-icon">
 							<div class="item-top">
-								<img src="img/index/2.png" alt="Изображение товара">
-								<span class="price">380<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp;/кг</span></span>
+								<img src="img/index/2.png" alt="Изображение товара" width="267" height="267">
+								<span class="price">380<img src="img/index/rub.svg" alt="Р" width="32" height="37"><span class="mass">&nbsp;/кг</span></span>
 							</div>
 							<a href="#" class="goods-title link-color">Сливочно-кофейное с кусочками шоколада</a>
 							<a href="#" class="button">Быстрый просмотр</a>
@@ -129,8 +129,8 @@
 					<article class="item">
 						<div class="item-active hit-icon">
 							<div class="item-top">
-								<img src="img/index/3.png" alt="Изображение товара">
-								<span class="price">355<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp;/кг</span></span>
+								<img src="img/index/3.png" alt="Изображение товара" width="267" height="267">
+								<span class="price">355<img src="img/index/rub.svg" alt="Р" width="32" height="37"><span class="mass">&nbsp;/кг</span></span>
 							</div>
 							<a href="#" class="goods-title link-color">Сливочно-клубничное с присыпкой из белого шоколада</a>
 							<a href="#" class="button">Быстрый просмотр</a>
@@ -139,8 +139,8 @@
 					<article class="item ">
 						<div class="item-active hit-icon">
 							<div class="item-top">
-								<img src="img/index/4.png" alt="Изображение товара">
-								<span class="price">415<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp;/кг</span></span>
+								<img src="img/index/4.png" alt="Изображение товара" width="267" height="267">
+								<span class="price">415<img src="img/index/rub.svg" alt="Р" width="32" height="37"><span class="mass">&nbsp;/кг</span></span>
 							</div>
 							<a href="#" class="goods-title link-color">Сливочное крем-брюле с карамельной подливкой</a>
 							<a href="#" class="button">Быстрый просмотр</a>
@@ -203,7 +203,7 @@
 		</div>
 		<div class="map">
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043705241!2d30.320889251850033!3d59.93879418178723!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1471539736899" width="100%" height="429" frameborder="0" style="border:0" allowfullscreen></iframe>
-			<img src="img/index/map.jpg" alt="" class="map-img">
+			<img src="img/index/map.jpg" alt="" class="map-img" width="1200" height="430">
 		</div>
 		<div class="container clearfix">
 			<footer class="main-footer">
