--- a/catalog.html
+++ b/catalog.html
@@ -271,13 +271,13 @@
 				</div>
 				<div class="page-bot clearfix">
 					<div class="paginator clearfix">
-						<a href="" class="page-before"></a>
+						<a href="#" class="page-before">Предыдущая страница</a>
 						<a class="paginator-active">1</a>
 						<a href="#" class="page">2</a>
 						<a href="#" class="page">3</a>
 						<a href="#" class="page">4</a>
 						<a href="#" class="page">5</a>
-						<a href="" class="page-after"></a>
+						<a href="#" class="page-after">Следующая страница</a>
 					</div>
 				</div>
 			</main>
